closes #105
