# src/router/init.go
@@ -193,6 +193,7 @@ func InitializeRouter() {
 	// package handlers
 	packageRouter := r.PathPrefix("/packages").Subrouter()
 	packageRouter.HandleFunc("", authCoordinator(createPackage)).Methods("POST")
+	packageRouter.HandleFunc("", authMember(getPackages)).Methods("GET")
 	packageRouter.HandleFunc("/{id}/items", authCoordinator(updatePackageItems)).Methods("PUT")
 
 	// contact handlers
